--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,6 @@ var/
 .installed.cfg
 *.egg
 config/
-*.html
 venv/
 htmlcov/
 .coverage
@@ -35,3 +34,7 @@ _template/
 html/
 doctrees/
 build/lib/
+transcriptic/
+*.rst
+docs/
+
